# Workflow-Transitions

./: LICENSE  README.md  license.txt  pyproject.toml
.github/workflows/: ci.yml
workflow_transitions/: hooks.py  modules.txt
workflow_transitions/fixtures/: custom_field.json
workflow_transitions/workflow_transitions/custom/: workflow.json
workflow_transitions/workflow_transitions/doc_events/: workflow.py
workflow_transitions/workflow_transitions/doctype/approvers/: approvers.json  approvers.py
workflow_transitions/workflow_transitions/doctype/document_shift/: document_shift.js  document_shift.json  document_shift.py  test_document_shift.py
workflow_transitions/workflow_transitions/doctype/email_roles/: email_roles.json  email_roles.py
workflow_transitions/workflow_transitions/doctype/email_users/: email_users.json  email_users.py
workflow_transitions/workflow_transitions/doctype/shift_detail/: shift_detail.json  shift_detail.py
workflow_transitions/workflow_transitions/doctype/state_change/: state_change.js  state_change.json  state_change.py  test_state_change.py
workflow_transitions/workflow_transitions/doctype/state_change_items/: state_change_items.json  state_change_items.py
workflow_transitions/workflow_transitions/doctype/workflow_email/: test_workflow_email.py  workflow_email.js  workflow_email.json  workflow_email.py
workflow_transitions/workflow_transitions/doctype/workflow_email_detail/: workflow_email_detail.json  workflow_email_detail.py
workflow_transitions/workflow_transitions/doctype/workflow_reminder/: test_workflow_reminder.py  workflow_reminder.js  workflow_reminder.json  workflow_reminder.py
(+6 files in other folders)
