[project]
name = "workflow_transitions"
authors = [
    { name = "info@finbyz.tech", email = "info@finbyz.tech"}
]
description = "Track the transitions of your document"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.frappe]
frappe = ">=15.0.0 <16.0.0"
# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
