[project]
name = "workflow_transitions"
version = "1.0.0"
description = "Track the transitions of your document"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "info@finbyz.tech", email = "info@finbyz.tech" }
]

dependencies = [
]

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<17.0.0"

[build-system]
requires = ["flit_core>=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
